--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,34 @@
 }
 
 
+/* Input Label gap */
+.ant-col.ant-form-item-label {
+  padding: 0 0 4px !important;
+}
+
+/* Ant Checkbox modifying */
+.ant-checkbox-wrapper .ant-checkbox {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 2px solid #545454;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.ant-checkbox-wrapper .ant-checkbox-checked .ant-checkbox-inner {
+  background-color: #1E65FF !important;
+  border-color: #1E65FF !important;
+  border-radius: 50%;
+}
+
+.ant-checkbox-wrapper .ant-checkbox-inner {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+}
+
 /* phone Input  */
 .PhoneInputInput {
   outline: none;
